   + You cannot set the value higher than the number of logical processors (processor cores taking into account hyperthreading etc.) in the system
   + If the org.pepsoft.worldpainter.threads advanced setting is present it overrides this setting. Remove that advanced setting in order to be able to adjust this value in the Preferences
 * Bug fix: correct the light levels of the minecraft:light block, and make it insubstantial so that it does not block solid objects
 * Various usability improvements

-- Version 2.15.16, released 9-12-2022

 * Allow plants to be placed on mud
 * Bug fix: don't delete or corrupt Custom Biomes when switching between dimensions
 * Bug fix: don't crash when a ceiling dimension has tiles where the surface does no
 * Various bug fixes and usability improvements

-- Version 2.15.15, released 7-12-2022

 * The Custom Layers tab of the Exporting screen now has Enable and Disable buttons to quickly select or deselect all selected layers for Export
 * Bug fix: use correct Custom Biome names when exporting Custom Cave/Tunnel Layers with Floor Dimensions
 * Bug fix: make adding ceiling dimensions to worlds with non-standard build heights work
 * Various bug fixes and usability improvements

-- Version 2.15.14, released 2-12-2022

 * The Import Mask screen (Edit -> Import -> Mask as terrain or layer...) has been made more powerful and easier to use:
   + Many more mappings are now possible, for example:
     - On/off layers (e.g. Frost or Custom Ground Cover layers) can now be mapped from a grey scale image by dithering or applying a threshold
     - One-bit masks can now be used to set a single terrain type, or an individual value or intensity of any layer
   + Usability has been improved by allowing selection of all layers and values and then restricting the available mappings, or explaining why no mappings are available, rather than restricting the available selections without explanation